# WorkGit

./: README.md
Ci2cset/: Android.mk  Ci2cset.c  config_file.c  i2cdetect  i2cdump  i2cget  i2cset  i2ctransfer  regmap.txt
GunLock/GunLock/ProtocolDoc/: GunLockProtocolV1.3.docx
GunLock/GunLock/testprogram/: readme.txt
V4L2_OpenCV2_Camera/: CMakeLists.txt  V4L2_OpenCV2_Camera.kdev4  build.sh  include.h  main.cpp  thread.cpp  thread.h  v4l2cap.cpp  v4l2cap.h
bridge_i2c/: Android.mk  bridge_i2c.c
c_object_oriented/: build.sh  c_object_oriented.kdev4  circle.c  circle.h  main.c  rect.c  rect.h  rect_main.c  shape.c  shape.h  shape_main.c
c_plus_polymorphism/: CMakeLists.txt  fighter.cpp
camera_bridge/: Max9298Mipi.cpp  Max9298Mipi.h  Tp2825.cpp  Tp2825.h  adv7186.c  mipi_max9288.c  mipi_max9298.c  mipi_tp2854.c  tp2825.c
cmd/: alluserlog.bat  kernellog.bat  mobileinfo.bat  mobilelog.bat  reboot.bat  resume.bat
count_time/: Android.mk  count_time.c
dma_m2m_test/: Android.mk  dma_m2m_test.c  dma_mem_to_mem.c
dma_memcpy/: Android.mk  dma_memcpy.c  dma_memcpy_test.c
drm_demos/modeset-atomic-crtc/: Android.bp  Makefile.am  Makefile.sources
drm_demos/modeset-atomic-plane/: Android.bp  Makefile.am  Makefile.sources
drm_demos/modeset-double-buffer/: Android.bp  Makefile.am  Makefile.sources
drm_demos/modeset-page-flip/: Android.bp  Makefile.am  Makefile.sources  modeset-page-flip.c
drm_demos/modeset-plane-test/: Android.bp  Android.mk.BAK  Makefile.am  Makefile.sources  modeset-plane-test.c
drm_demos/modeset-single-buffer/: Android.bp  Android.mk.BAK  Makefile.am  Makefile.sources
gcc_makefile/: Makefile  gcc64_make.c
gpio_key/: Makefile  auto2712p1v1-common.dtsi  gpio_key_drv.c  mt2712.dtsi  readme.txt
gpio_key/gpio_key_app/: Android.mk  gpio_key_app.c
gyro_test/gyro_test_capp/: Android.mk  gyro_test.c
gyro_test/gyro_test_drv/: bmi160_gyro.c  bmi160_gyro.h  sensors_io.h
gyro_test/gyro_test_hal/: Android.bp.BAK  Android.mk  gyro_temp.c  gyro_temp.h
gyro_test/gyro_test_jni/: com_android_server_GyroTemperature.cpp
hellojni/: Android.mk  AndroidManifest.xml  readme.txt
hellojni/jni/: Android.mk  com_chm_hellojni_HelloWorld.h  hellojni.c  readme.txt
hellojni/jni/javah/: readme.txt
hellojni/res/layout/: activity_main.xml
hellojni/res/values/: strings.xml
i2c-tools_4.0/i2c-tools_4.0/: Android.mk  ReadMe_i2c_tools_4.0.txt
kilo/: Android.mk  kilo.c
led_struct/: CMakeLists.txt  board.c  led_demo.c  led_demo.kdev4  led_operations.h  readme.txt
leds_drv/: Makefile  auto2712p1v1-common.dtsi  board_A_led.c  chip_gpio.c  leddrv.c  leddrv.h  mt2712.dtsi  readme.txt
leds_drv/leds_drv_app/: Android.mk  leds_drv_app.c
libyuv/: .gitignore  Android.mk  BUILD.gn  CMakeLists.txt  DEPS  README.chromium  codereview.settings  libyuv.gyp  libyuv.gypi  libyuv_test.gyp  linux.mk
libyuv/include/libyuv/: row.h  scale_row.h  version.h
libyuv/source/: planar_functions.cc  row_any.cc  row_common.cc  row_gcc.cc  row_win.cc  scale_win.cc
libyuv/unit_test/: convert_test.cc  planar_test.cc  rotate_argb_test.cc  rotate_test.cc  scale_argb_test.cc  scale_color_test.cc  scale_test.cc  unit_test.h
libyuv/util/: psnr.cc
max9286_i2c_interface/bridge_i2c/: Android.mk  bridge_i2c.c  bridge_i2c.cpp  bridge_i2c.h  broadcast_reg_config.txt
mcu_data/: Android.mk  mcu_data.c  mcu_data_misc.c
mcu_update/libmcu_update/: Android.mk  DataFrame.cpp  DataFrame.h  Debug.h  HardInterface.h  McuDataFrame.cpp  McuDataFrame.h  Protocol.cpp  Protocol.h  UartInterface.cpp  UartInterface.h  cobs.cpp  cobs.h  ib_mcuctl.cpp  ib_mcuctl.h  ib_srec.cpp  ib_srec.h
mcu_update/mcu_update/: Android.mk  mcu_update.cpp
my_uevent/my_uevent_app/: Android.mk  my_uevent_app.c
my_uevent/my_uevent_drv/: Makefile  my_uevent_drv.c
perl/copy_and_build_make/mytools/: ParryCopyFolderUtil.pm  ParryMTKAndroidUtil.pm  ParryUtil.pm  backupModifyFile.pl  copyProjectFiles.pl  make.pl  makeEiot.pl  mk  mk.sh  package_bin_by_zip.pl
perl/mytools/: ParryMTKAndroidUtil.pm  ParryUtil.pm  backupModifyFile.pl  package_bin_by_zip.pl
python/: symbol-dep.py
shell/copy_files/project/: NewProjectNote.txt  fileAppendMerge.sh  fileCompareMerge.sh  fileReplace.sh  fileRestoryDefault.sh  projectdel.sh  projectdelnew.sh  shellexplain.txt
shell/replace_str/: replace_str.sh
shell/sh_delay_execution/: exeDelay.sh
shell/sprdtools/autotest/: Android.mk  bt.cpp  fm.cpp  key_common.cpp  key_common.h  light.cpp  tcard.cpp  tester.cpp  tp.cpp
shell/sprdtools/buildpac/: autobuild.sh  mk  pac  replacebin.sh
shell/sprdtools/engmode/: Android.mk  adc_calibration.c  calibration.h  eng_cmd4linuxhdlr.c  (+4 more)
shell/tools/: build_eng.sh  build_release.sh  build_userdebug.sh  imageout.sh  load.sh  modem.sh  prebuild  prebuild.sh
slamwork/helloSLAM/: CMakeLists.txt  a.out  helloSLAM.cpp  helloSLAM.kdev4
slamwork/libHelloSLAM/: CMakeLists.txt  libHelloSLAM.cpp  libHelloSLAM.h
sunxi_car_reverse/: .auxiliary_line.o.cmd  .buffer_pool.o.cmd  .built-in.o.cmd  .car_reverse_evs.o.cmd  .cobs.o.cmd  .crc16.o.cmd  .evs_communication.o.cmd  .preview.o.cmd  .ringbuffer.o.cmd  .sunxi_car_reverse.o.cmd  .ubmp.o.cmd  .upng.o.cmd  .video_source.o.cmd  Kconfig  Makefile  algorithm.c  algorithm.h  auxiliary_line.c  base_types.h  buffer_pool.c  car_reverse.c  car_reverse.h  car_reverse_evs.c  cobs.c  cobs.h  crc16.c  crc16.h  evs_communication.c  evs_communication.h  mcu_communication.c  mcu_communication.h  mcu_data_misc.c  mcu_data_misc.h  modules.builtin  preview.c  ringbuffer.c  ringbuffer.h  sunxi_tvd.h  ubmp.c  ubmp.h  (+3 more)
sysudp/: sysudp.c
temp/: checkstatus.c
tinyfs/: tinyfs.c  tinyfs.h
uart_test/: Android.mk  uartread.c  uarttest.c  uarttest7.c  uartwrite.c
uvc_v4l2/: .gitignore  Makefile  README.md  main.c
uvc_v4l2/draw_framebuffer/: draw_framebuffer.c  draw_framebuffer.h
uvc_v4l2/libyuv/: readme.txt
uvc_v4l2/v4l2_uvc/: v4l2_uvc.c  v4l2_uvc.h
web_camera/: Makefile
web_camera/include/: dev.h  huffman.h  merrno.h  server.h  service.h
web_camera/src/: dev.c  merrno.c  print.c  server.c  server_test.c  service.c
(+127 files in other folders)
